# latent-control-lab

./: .gitignore  AGENTS.md  CODEX_PROMPT.txt  CODEX_TASK.md  Makefile  README.md  gradio_app.py  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
artifacts/: baseline_metrics.csv  baseline_metrics.json  baseline_metrics_v2.csv  baseline_metrics_v2.json  confusion_matrix.csv  confusion_matrix_v2.csv  data_efficiency.csv  data_efficiency.json  dataset_audit.json  dataset_near_duplicates.csv  dataset_v2_audit.json  dataset_v2_near_duplicates.csv  example_routes.jsonl  example_routes_v2.jsonl  hard_eval_calibrated_v2.json  hard_eval_confusion_matrix.csv  hard_eval_confusion_matrix_calibrated_v2.csv  hard_eval_confusion_matrix_v2.csv  hard_eval_metrics.json  hard_eval_metrics_v2.json  hard_eval_predictions.csv  hard_eval_predictions_calibrated_v2.csv  hard_eval_predictions_v2.csv  layer_sweep_metrics.csv  layer_sweep_metrics.json  metrics.json  metrics_v2.json  model_comparison.csv  model_comparison.json  ood_advanced_metrics.csv  ood_advanced_metrics.json  ood_advanced_metrics_v2.csv  ood_advanced_metrics_v2.json  ood_metrics.json  ood_metrics_v2.json  prompt_augmented_hard_eval.csv  prompt_augmented_metrics.csv  prompt_augmented_metrics.json  prompt_robustness.csv  prompt_robustness.json  (+20 more)
data/: hard_eval.csv  intent_dataset.csv  intent_dataset_v2.csv  intents.yaml  vectorbot_intents.csv  vectorbot_intents_full.csv
docs/: BASELINES.md  COLAB_GEMMA.md  CV_BULLETS.md  DATA_EFFICIENCY.md  DEMO_RESULTS.md  DEMO_RESULTS_V2.md  DEMO_SCRIPT.md  (+24 more)
(+75 files in other folders)
