[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-native-software"
version = "0.1.0"
description = "Zero-generation latent action routing using LLM hidden states and linear probes."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
llm = [
    "torch>=2.1",
    "transformers>=4.45",
    "accelerate>=0.30",
    "packaging>=22",
    "safetensors>=0.4.3",
    "bitsandbytes>=0.43; platform_system != 'Windows'",
]
dev = [
    "pytest>=7.4",
    "ruff>=0.5",
]
viz = [
    "matplotlib>=3.8",
    "plotly>=5.20",
    "streamlit>=1.32",
    "umap-learn>=0.5",
]
interp = [
    "transformer-lens>=2.0",
]

[tool.setuptools.packages.find]
include = ["neural_native*"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["notebooks/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"
markers = [
    "real_model: tests that load a real Hugging Face model and may use the local HF cache",
]
